--- a/cms/static/sass/elements/_sock.scss
+++ b/cms/static/sass/elements/_sock.scss
@@ -39,7 +39,7 @@
       }
 
       &:hover {
-        background: $blue;
+        background: $uxpl-blue-base;
         color: $white;
       }
     }
