--- a/cms/static/sass/elements/_modules.scss
+++ b/cms/static/sass/elements/_modules.scss
@@ -110,7 +110,7 @@
       @extend %t-title5;
       @extend %t-strong;
       margin-bottom: ($baseline*0.75);
-      color: $green-d2;
+      color: $uxpl-green-base;
     }
 
     // add component - list of green buttons
@@ -131,16 +131,10 @@
         height: ($baseline*5);
         margin-bottom: ($baseline/2);
         box-shadow: 0 1px 1px $shadow, 0 1px 0 rgba(255, 255, 255, .4) inset;
-        border: 1px solid $green-d3;
         border-radius: ($baseline/4);
         padding: 0;
-        background-color: $green-d2;
         text-align: center;
-        color: $white;
-
-        &:hover {
-          background: $green-d1;
-        }
+        @extend %btn-primary-green;
 
         .name {
           @include box-sizing(border-box);
