--- a/cms/static/sass/views/_dashboard.scss
+++ b/cms/static/sass/views/_dashboard.scss
@@ -300,7 +300,7 @@
       margin: 0 10px;
 
       &.active {
-        border-bottom: 4px solid $blue;
+        border-bottom: 4px solid $uxpl-blue-base;
       }
 
       &.active, &:hover {
@@ -310,7 +310,7 @@
       }
 
       a {
-        color: $blue;
+        color: $uxpl-blue-base;
         cursor: pointer;
         display: inline-block;
       }
