--- a/cms/static/sass/views/_textbooks.scss
+++ b/cms/static/sass/views/_textbooks.scss
@@ -44,10 +44,10 @@
           @extend %ui-fake-link;
 
           &:hover {
-            color: $blue-d1;
+            color: $uxpl-blue-base;
 
             .ui-toggle-expansion {
-              color: $blue-d1;
+              color: $uxpl-blue-base;
             }
           }
         }
@@ -212,7 +212,7 @@
             margin: 0 0 ($baseline/4) 0;
 
             &.is-focused {
-              color: $blue-d1;
+              color: $uxpl-blue-base;
             }
           }
 
