--- a/lms/static/sass/course/courseware/_courseware.scss
+++ b/lms/static/sass/course/courseware/_courseware.scss
@@ -75,7 +75,7 @@ html.video-fullscreen {
       color: $gray;
     }
     a:active, a:hover {
-      color: $link-hover;
+      color: $uxpl-blue-base;
     }
 
     .license-label,
@@ -151,7 +151,7 @@ html.video-fullscreen {
       }
       button.gated-sequence {
         background: $transparent;
-        color: $blue-d1;
+        color: $uxpl-blue-base;
         border: none;
         box-shadow: none;
         @include text-align(left);
@@ -160,7 +160,7 @@ html.video-fullscreen {
 
         &:hover {
           background-color: transparent;
-          color: $link-hover;
+          color: $uxpl-blue-hover-active;
         }
       }
 
@@ -169,12 +169,12 @@ html.video-fullscreen {
         font-size: 1.3em;
       }
       .gated-sequence {
-        color: #147ABA;
+        color: $uxpl-blue-base;
         font-weight: 600;
         padding: ($baseline / 1.5) ($baseline / 4);
         a.start-timed-exam {
           cursor: pointer;
-          color: #147ABA;
+          color: $uxpl-blue-base;
           font-weight: 600;
           position: relative;
           top: ($baseline/10);
@@ -306,7 +306,7 @@ html.video-fullscreen {
         }
         &:last-child {
           > .practice-exam {
-            color: #147ABA;
+            color: $uxpl-blue-base;
           }
           border-bottom: none;
         }
@@ -670,7 +670,7 @@ section.self-assessment {
 
 .CodeMirror {
     
-    .CodeMirror-linenumber {
+    .CodeMirror-linenumber.CodeMirror-gutter-elt {
         color: $gray-d3 !important;
     }
 }
