Add some dark backgrounds

--- a/lms/static/sass/_developer.scss
+++ b/lms/static/sass/_developer.scss
@@ -286,3 +286,11 @@
     }
   }
 }
+
+.xblock-render {
+	background: black !important;
+}
+
+body.view-in-course, #content, .course-wrapper, .course-content, .xblock-student_view {
+  background: black !important;
+}
