--- a/cms/static/sass/_developer.scss
+++ b/cms/static/sass/_developer.scss
@@ -8,3 +8,16 @@
 // }
 
 // --------------------
+
+.unit-location,
+.wrapper-release.bar-mod-content,
+.wrapper-visibility.bar-mod-content,
+.mast.has-actions .nav-actions,
+.list-courses .item-actions.course-actions,
+.status-release,
+[data-type="html"].add-xblock-component-button,
+[data-type="video"].add-xblock-component-button,
+[data-type="discussion"].add-xblock-component-button,
+{
+  display: none !important;
+}
