--- a/lms/static/sass/_developer.scss
+++ b/lms/static/sass/_developer.scss
@@ -288,5 +288,5 @@
 }
 
 body.view-in-course, #content, .course-wrapper, .course-content, .xblock-student_view {
-  background: black !important;
+  background: transparent !important;
 }
