--- a/cms/static/sass/_developer.scss
+++ b/cms/static/sass/_developer.scss
@@ -17,7 +17,7 @@
 .status-release,
 [data-type="html"].add-xblock-component-button,
 [data-type="video"].add-xblock-component-button,
-[data-type="discussion"].add-xblock-component-button,
+[data-type="discussion"].add-xblock-component-button
 {
   display: none !important;
 }
