--- a/lms/static/sass/_developer.scss
+++ b/lms/static/sass/_developer.scss
@@ -287,10 +287,12 @@
   }
 }
 
-.xblock-render {
-	background: black !important;
-}
-
-body.view-in-course, #content, .course-wrapper, .course-content, .xblock-student_view {
-  background: black !important;
+body.view-in-course,
+#content,
+.course-wrapper,
+.course-content,
+.xblock-student_view,
+.xblock-render
+{
+  background: transparent !important;
 }
