--- a/lms/static/sass/_developer.scss
+++ b/lms/static/sass/_developer.scss
@@ -287,6 +287,28 @@
   }
 }
 
-body.view-in-course, #content, .course-wrapper, .course-content, .xblock-student_view {
-  background: transparent !important;
+// GOOGLE DOCS XBLOCK overrides
+
+.google-docs-xblock-wrapper {
+  height: 100%;
+}
+
+.xblock-render .xblock-student_view-google-document {
+  position: relative !important;
+}
+
+.xblock-student_view-google-document {
+  position: fixed !important;
+  left: 0 !important;
+  top: 0 !important;
+  width: 100% !important;
+  height: 100% !important;
+  padding: 0 !important;
+  border: 0 none !important;
+
+  iframe {
+    border: 0 none;
+    height: 100%;
+    width: 100%;
+  }
 }
