change some template and styling

--- a/cms/templates/course_outline.html
+++ b/cms/templates/course_outline.html
@@ -114,7 +114,7 @@ from openedx.core.djangolib.markup import HTML, Text
     <header class="mast has-actions has-subtitle">
         <h1 class="page-header">
             <small class="subtitle">${_("Content")}</small>
-            <span class="sr">&gt; </span>${_("Case Content")}
+            <span class="sr">&gt; </span>${_("Your Media Units")}
         </h1>
 
         <nav class="nav-actions" aria-label="${_('Page Actions')}">
