--- a/cms/static/sass/_developer.scss
+++ b/cms/static/sass/_developer.scss
@@ -19,7 +19,8 @@
 [data-type="video"].add-xblock-component-button,
 [data-type="discussion"].add-xblock-component-button,
 [data-type="problem"].add-xblock-component-button,
-[data-type="advanced"].add-xblock-component-button
+[data-type="advanced"].add-xblock-component-button,
+.bit.external-help
 {
   display: none !important;
 }
@@ -28,3 +29,4 @@
 {
 	display: block !important;
 }
+
