--- a/cms/static/sass/_developer.scss
+++ b/cms/static/sass/_developer.scss
@@ -12,9 +12,9 @@
 .unit-location,
 .wrapper-release.bar-mod-content,
 .wrapper-visibility.bar-mod-content,
-.mast.has-actions .nav-actions,
 .list-courses .item-actions.course-actions,
 .status-release,
+.nav-actions,
 [data-type="html"].add-xblock-component-button,
 [data-type="video"].add-xblock-component-button,
 [data-type="discussion"].add-xblock-component-button,
@@ -25,8 +25,10 @@
   display: none !important;
 }
 
-.new-component-templates.new-component-advanced 
+.new-component-templates.new-component-advanced
 {
 	display: block !important;
 }
-
+.unit-location.note {
+  display: block;
+}
