--- a/cms/templates/asset_index.html
+++ b/cms/templates/asset_index.html
@@ -39,7 +39,8 @@
             <small class="subtitle">${_("Content")}</small>
             <span class="sr">&gt; </span>${_("Files & Uploads")}
         </h1>
-
+        ## MIT override
+        %if user.is_staff:
         <nav class="nav-actions" aria-label="${_('Page Actions')}">
             <h3 class="sr">${_("Page Actions")}</h3>
             <ul>
@@ -48,6 +49,7 @@
                 </li>
             </ul>
         </nav>
+        %endif
     </header>
 </div>
 
