--- a/cms/templates/course_outline.html
+++ b/cms/templates/course_outline.html
@@ -116,7 +116,8 @@ from openedx.core.djangolib.markup import HTML, Text
             <small class="subtitle">${_("Content")}</small>
             <span class="sr">&gt; </span>${_("Your Media Units")}
         </h1>
-
+        ## MIT override
+        %if user.is_staff:
         <nav class="nav-actions" aria-label="${_('Page Actions')}">
             <h3 class="sr">${_("Page Actions")}</h3>
             <ul>
@@ -144,6 +145,7 @@ from openedx.core.djangolib.markup import HTML, Text
                 </li>
             </ul>
         </nav>
+        %endif
     </header>
 </div>
 
