--- a/cms/templates/index.html
+++ b/cms/templates/index.html
@@ -26,6 +26,8 @@ from openedx.core.djangolib.markup import HTML, Text
     <nav class="nav-actions" aria-label="${_('Page Actions')}">
       <h3 class="sr">${_("Page Actions")}</h3>
       <ul>
+        ## MIT override
+        %if user.is_staff:
         <li class="nav-item">
           % if course_creator_status=='granted':
           <a href="#" class="button new-button new-course-button"><span class="icon fa fa-plus icon-inline" aria-hidden="true"></span>
@@ -44,6 +46,7 @@ from openedx.core.djangolib.markup import HTML, Text
             ${_("New Program")}</a>
           % endif
         </li>
+        %endif
       </ul>
     </nav>
     % endif
