--- a/cms/templates/widgets/header.html
+++ b/cms/templates/widgets/header.html
@@ -10,9 +10,15 @@
   <header class="primary" role="banner">
 
     <div class="wrapper wrapper-l">
-      <h1 class="branding"><a href="/">
-        <img src="${static.url('images/studio-logo.png')}" alt="${settings.STUDIO_NAME}" />
-      </a></h1>
+      <h1 class="branding">
+          %if user.is_staff:
+            <a href="/">
+          %else:
+            <a href="">
+          %endif
+                <img src="${static.url('images/studio-logo.png')}" alt="${settings.STUDIO_NAME}" />
+            </a>
+      </h1>
 
       % if context_course:
       <%
@@ -35,13 +41,18 @@
       %>
       <h2 class="info-course">
         <span class="sr">${_("Current Course:")}</span>
-        <a class="course-link" href="${index_url}">
+        %if user.is_staff:
+            <a class="course-link" href="${index_url}">
+        %else:
+            <a class="course-link" href="">
+        %endif
           <span class="course-org">${context_course.display_org_with_default}</span><span class="course-number">${context_course.display_number_with_default}</span>
           <span class="course-title" title="${context_course.display_name_with_default}">${context_course.display_name_with_default}</span>
         </a>
       </h2>
-
-      <nav class="nav-course nav-dd ui-left" aria-label="${_('Course')}">
+##         MIT override
+          %if user.is_staff:
+          <nav class="nav-course nav-dd ui-left" aria-label="${_('Course')}">
         <h2 class="sr">${_("Course Navigation")}</h2>
         <ol>
           <li class="nav-item nav-course-courseware">
@@ -128,6 +139,7 @@
           </li>
         </ol>
       </nav>
+           %endif
       % elif context_library:
        <%
             library_key = context_library.location.course_key
