--- a/cms/static/sass/_developer.scss
+++ b/cms/static/sass/_developer.scss
@@ -14,7 +14,7 @@
 .wrapper-visibility.bar-mod-content,
 .list-courses .item-actions.course-actions,
 .status-release,
-.nav-actions,
+//.nav-actions,
 [data-type="html"].add-xblock-component-button,
 [data-type="video"].add-xblock-component-button,
 [data-type="discussion"].add-xblock-component-button,
