staff user missing action buttons

--- a/cms/static/sass/_developer.scss
+++ b/cms/static/sass/_developer.scss
@@ -12,7 +12,7 @@
 .unit-location,
 .wrapper-release.bar-mod-content,
 .wrapper-visibility.bar-mod-content,
-.nav-actions,
+.mast.has-actions .nav-actions,
 .list-courses .item-actions.course-actions,
 .status-release,
 [data-type="html"].add-xblock-component-button,
