--- a/lms/templates/main.html
+++ b/lms/templates/main.html
@@ -28,6 +28,24 @@ from pipeline_mako import render_require_js_path_overrides
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <style>
+      .no-fouc {
+        display: none;
+      }
+      #loader {
+        position: fixed;
+        left: 0;
+        top: 0;
+        height: 100%;
+        width: 100%;
+        background: black;
+        z-index: 999999999999;
+      }
+    </style>
+    <script type="text/javascript">
+        document.documentElement.className = 'no-fouc';
+    </script>
+
 ## Define a couple of helper functions to make life easier when
 ## embedding theme conditionals into templates. All inheriting
 ## templates have access to these functions, and we can import these
@@ -120,9 +138,21 @@ from pipeline_mako import render_require_js_path_overrides
     </script>
 % endif
 
+<script>
+  $(document).ready(function(){
+    $('.no-fouc').removeClass('no-fouc');
+    $('#loader').slideUp(1000);
+  });
+  $(window).load(function(){
+    window.dispatchEvent(new Event('resize'));
+  });
+</script>
+
 </head>
 
 <body class="${static.dir_rtl()} <%block name='bodyclass'/> lang_${LANGUAGE_CODE}">
+
+<div id="loader"></div>
 
 <%static:optional_include_mako file="body-initial.html" is_theming_enabled="True" />
 <div id="page-prompt"></div>
